tests/paczka1/fuzzy1/72678051.err
Error in line 2: vOZZMHp S731 35,2
Error in line 4: TJ1M S731 20,6
Error in line 15: vOZZMHp S731 44,9
Error in line 11: 0emX8B S579 64,8
Error in line 25: vOZZMHp A603 69,8
Error in line 26: vOZZMHp S579 21,8
Error in line 20: 0emX8B S168 18,0
Error in line 32: Xvexa A603 63,4
Error in line 36: 0emX8B S168 10,3
Error in line 38: hxcoOkO S168 29,0
